update docpages and README

--- a/doc/releasenotes/v0.5.0.rst
+++ b/doc/releasenotes/v0.5.0.rst
@@ -97,6 +97,9 @@ Python API Changes
 
 - Input file format changes:
 
+  - Removed the ``-n`` command line argument in favor of the new ``mpi_args`` input parameter
+  - Chaged the ``-d`` command line argument to ``-s``/``--threads``.
+  - (new)  → ``mpi_args``
   - Added default values for certain input parameters
   - Added depletion settings for OpenMC
   - ``num_depsteps`` → ``n_depletion_steps``
