--- a/doc/releasenotes/v0.5.0.rst
+++ b/doc/releasenotes/v0.5.0.rst
@@ -173,11 +173,15 @@ Python API Changes
     - (new function) →  ``get_neutron_settings()``
     - (new function) →  ``_get_burnable_materials_file()`` 
     - (new function) →  ``_get_burnable_material_card_data()``
+    - (new function) →  ``resolve_include_paths()``
+    - (new function) →  ``_convert_name_to_nuccode()``
     - (new parameter) →  ``zaid_convention``
 
 
   - ``OpenMCDepcode`` is a ``Depcode`` subclass that interfaces with ``openmc``. This class implements the following functions 
     - ``run_depletion_step()``
+    - ``write_saltproc_openmc_tallies()``
+    - ``convert_nuclide_code_to_name()``
     - ``switch_to_next_geometry()``
     - ``write_runtime_input()``
     - ``write_depletion_settings()``
@@ -206,6 +210,7 @@ Python API Changes
 
     -  ``core_number`` →  (removed)
     -  ``node_number`` →  (removed)
+    - (new function) → ``_add_missing_nuclides()``
 
   - ``Sparger``
 
