swap out pydotplus for pydot

--- a/doc/releasenotes/v0.5.0.rst
+++ b/doc/releasenotes/v0.5.0.rst
@@ -44,7 +44,11 @@ Dependency Changes
   - (new) → `openmc`_
   
 - ``pyne>=0.5.11`` → ``pyne>=0.5.11=nomoab_noopenmc*``
-  
+
+- ``pydotplus`` →  (removed)
+
+- (new) → ``pydot``
+
 
 
 New Features
