--- a/doc/releasenotes/v0.5.0.rst
+++ b/doc/releasenotes/v0.5.0.rst
@@ -15,6 +15,8 @@ Release notes for v0.5.0
 
 
 .. _openmc: https://github.com/openmc-dev/openmc
+.. _serpentTools: https://github.com/CORE-GATECH-GROUP/serpent-tools
+.. _pytables: https://github.com/PyTables/PyTables
 .. _@yardasol: https://github.com/yardasol
 
 
@@ -39,15 +41,15 @@ Dependency Changes
   Describe any new/removed/modified package dependencies
 
 
-- ``SaltProc`` now optionally requires the following package:
+- ``SaltProc`` now requires the following package:
 
   - (new) → `openmc`_
+  - (new) → `serpentTools`_
+  - (formality) → `pytables`_
   
-- ``pyne>=0.5.11`` → ``pyne>=0.5.11=nomoab_noopenmc*``
+- ``pyne>=0.5.11`` →  (removed)
 
-- ``pydotplus`` →  (removed)
-
-- (new) → ``pydot``
+- ``pydotplus`` →  ``pydot``
 
 
 
